2014-08-25         [RELEASE] Release of custom_login_skin 0.1.0 (Nicole Cordes)
2014-08-25 cb088d4 [TASK] Add documentation (Nicole Cordes)
2014-08-25 c80fbcc [FEATURE] Add LoginFormHook to insert template and stylesheets (Nicole Cordes)
2014-08-25 1778917 [TASK] Add extension configuration (Nicole Cordes)
2014-08-25 020af0f [TASK] Add initial extension files (Nicole Cordes)

